[project]
name = "cubespec-tvac-ts"
version = "0.0.1"
description = "CubeSpec TVAC testing at KU Leuven"
authors = [
    {name = "IvS KU Leuven"}
]
maintainers = [
    {name = "Rik Huygen", email = "rik.huygen@kuleuven.be"},
    {name = "Sara Regibo", email = "sara.regibo@kuleuven.be"}
]
#readme = {"file" = "README.md", "content-type" = "text/markdown"}
requires-python = ">=3.10"
license = "MIT"
keywords = [
    "CGSE",
    "CubeSpec",
    "TVAC testing",
]

dependencies = [
    "cgse-common",
    "cgse-core",
    "digilent",
    "keithley-tempcontrol",
    "kikusui-power-supply",
    "aim-tti-awg",
    "gui-executor",
    "labjack-ljm",
    "matplotlib",
    "pyqt5",
    "pytz",
    "scipy>=1.15.3",
    "pigpio",
    "invoke",
]

[project.entry-points."navdict.directive"]
piezo = "tvac.directives:load_piezo_voltage_profile"

[project.entry-points."cgse.version"]
cubespec-tvac-ts = 'egse.version:get_version_installed'

[project.scripts]
update_tvac = "scripts.update_tvac:cli"

[project.gui-scripts]
tvac_ui = 'tvac.tasks.tvac.__init__:tvac_ui'

[tool.hatch.build.targets.wheel]
packages = ["src/tvac"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
